<resources>
    <string name="app_name">Liguria Soccorso </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Impostazioni</string>
    <string name="genova">Genova</string>
    <string name="imperia">Imperia</string>
    <string name="la_spezia">La Spezia</string>
    <string name="lavagna">Lavagna</string>
    <string name="savona">Savona</string>
    <string name="ospedalizzazioni">Ospedalizzazioni</string>
    <string name="san_martino">San Martino</string>
    <string name="galliera">Galliera</string>
    <string name="villa_scassi">Villa Scassi</string>
    <string name="micone_asl3">Micone ASL3</string>
    <string name="gallino_asl3">Gallino ASL3</string>
    <string name="evangelico_voltri">Evangelico Voltri</string>
    <string name="gaslini">Gaslini</string>
    <string name="lavagna_asl4">Lavagna ASL4</string>
    <string name="home">Home</string>
    <string name="accsso_ps">Accessi ai PS</string>
    <string name="refresh">Aggiorna</string>
    <string name="action_force_refresh">Forza aggiornamento</string>
    <string name="ps_activity_label">Accessi ai PS</string>
    <string name="waiting">In attesa</string>
    <string name="running">In visita</string>
    <string name="obi">OBI</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Impostazioni</string>
    <string name="no_data_display">Caricamento dati non riuscito.</string>
    <string name="waiting_label">Pazienti in attesa (tot. %1$d)</string>
    <string name="running_label">Pazienti in visita (tot. %1$d + %2$d OBI)</string>
    <string name="total_label">Tot. %1$d</string>
    <string name="croce_name">Croce:</string>
    <string name="mezzo">Mezzo</string>
    <string name="location">Località:</string>
    <string name="sintesi">Sintesi:</string>
    <string name="mission_no">Missione No.:</string>
    <string name="code_white">Bianco</string>
    <string name="code_green">Verde</string>
    <string name="code_yellow">Giallo</string>
    <string name="code_red">Rosso</string>
    <string name="location_s">Strada</string>
    <string name="location_p">Uffici - Esercizi pubblici</string>
    <string name="location_y">Impianti Sportivi</string>
    <string name="location_k">Casa</string>
    <string name="location_l">Impianti Lavorativi</string>
    <string name="location_q">Scuola</string>
    <string name="location_z">Altri Luoghi</string>
    <string name="charlie01">Patologia di origine traumatica</string>
    <string name="charlie02">Patologia di origine cardiocircolatoria</string>
    <string name="charlie03">Patologia di origine respiratoria</string>
    <string name="charlie04">Patologia di origine neurologica</string>
    <string name="charlie05">Patologia di origine psichiatrica</string>
    <string name="charlie06">Patologia di origine neoplastica</string>
    <string name="charlie07">Patologia di origine tossicologica</string>
    <string name="charlie08">Patologia di origine metabolica</string>
    <string name="charlie09">Patologia di origine gastroenterologica</string>
    <string name="charlie10">Patologia di origine urologica</string>
    <string name="charlie11">Patologia di origine oculistica</string>
    <string name="charlie12">Patologia di origine otorinolaringoiatrica</string>
    <string name="charlie13">Patologia di origine dermatologica</string>
    <string name="charlie14">Patologia di origine ostetrico-ginecologica</string>
    <string name="charlie15">Patologia di origine infettiva</string>
    <string name="charlie19">Altra patologia</string>
    <string name="charlie20">Patologia di origine non identificata</string>
    <string name="title_mission_activity">Ospedalizzazione</string>
    <string name="mission_label">Missione no.: %1$s</string>
    <string name="location_label">Località: %1s</string>
    <string name="not_implemented_yet">Funzionalità non ancora implementata.</string>
    <string name="sort_by_postazione">Ordina per P.A.</string>
    <string name="sort_by_mission">Ordina per numero ospedalizzazione</string>
    <string name="total_people">Tot. %1$d</string>
    <string name="charlie_code">Charlie:</string>
    <string name="charlie_code_text">Codice Charlie: %1$s</string>
    <string name="destination_hospital">Ospedale destinazione:</string>
    <string name="destination_hospital_text">Ospedale destinazione: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="india_code">Codice di uscita:</string>
    <string name="india_code_text">Codice di uscita: %1$s</string>
    <string name="invalid_synthesis_code">Codice sintesi invalido: %1$s</string>
    <string name="pickup_location">Luogo di intervento:</string>
    <string name="pickup_location_text">Luogo di intervento: %1$s</string>
    <string name="title_mission_detail">Dettaglio ospedalizzazione</string>
    <string name="get_all_missions">Visualizza tutte le ospedalizzazioni</string>
    <string name="where_is_drago">Dov\'è Drago?</string>
    <string name="drago_is">Drago è a %1$s</string>
    <string name="drago_is_not_working">Drago non è operativo in questo momento</string>
    <string name="code_white_label">Codice Bianco</string>
    <string name="emergency_code">Codice emergenza</string>
    <string name="white_description">Viene assegnato ai casi senza caratteristiche di gravità.\nI pazienti vengono assistiti solo dopo aver fronteggiato le situazioni più urgenti.\nIn OSPEDALE: Queste prestazioni sono soggette al pagamento del ticket.\nVisita NON urgente, attesa indeterminata.\nPaziente non grave, dopo i codici rossi, gialli e verdi.</string>
    <string name="green_description">Viene assegnato quando il paziente non è in pericolo di vita.\nL\'assistenza viene prestata con rapidità ma dopo aver risposto ai casi più urgenti.\nIn OSPEDALE: Queste prestazioni sono talvolta soggette al pagamento del ticket.\nVisita NON urgente, di norma entro 2 ore.\nPaziente non grave, dopo i codici rossi e gialli.</string>
    <string name="red_description">Viene assegnato ai pazienti più gravi con pericolo immediato di vita.\nIn OSPEDALE: Il Pronto Soccorso si mobilita dando priorità assoluta al caso, in termini sia di personale sanitario che delle tecnologie a disposizione.\nVisita IMMEDIATA\nPaziente in apparente pericolo di vita.</string>
    <string name="yellow_description">Viene assegnato ai pazienti con lesioni gravi, o serie alterazioni di una delle funzioni vitali (respiratoria, cardiocircolatoria, nervosa).\nIn OSPEDALE: Il personale sanitario si adopera per assicurare la massima rapidità di intervento.\nVisita URGENTE, di norma entro 20 minuti.\nPaziente grave, ma NON in apparente pericolo di vita.</string>
    <string name="legend">Legenda</string>
    <string name="charlie_code_legend">Codici Charlie</string>
    <string name="emergency_code_legend">Codici emergenza</string>
    <string name="about">Info</string>
    <string name="help">Aiuto</string>
    <string name="title_activity_centrali">Pubbliche Assistenze</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="centrali">Centrali</string>
    <string name="charlie_code_title">Codici Charlie</string>
    <string name="looking_for_drago">Alla ricerca di Drago&#8230;</string>
    <string name="avg_red_per_day" translatable="false">%1$d (%2$.2f)</string>
    <string name="avg_yellow_per_day" translatable="false">%1$d (%2$.2f)</string>
    <string name="avg_green_per_day" translatable="false">%1$d (%2$.2f)</string>
    <string name="avg_white_per_day" translatable="false">%1$d (%2$.2f)</string>
    <string name="avg_mission_per_day">Media ospedalizzazioni giornaliere: %1$.2f di cui:</string>
    <string name="no_of_ambulances">Totale mezzi censiti: <b>%1$d</b></string>
    <string name="retrieving_data">Caricamento dati in corso&#8230;</string>
    <string name="belong_to_centrale">Centrale di appartenenza: %1$s</string>
    <string name="pa_label_nav">Pubbliche Assistenze</string>
    <string name="statistics_to_be_implemented">Statistische disponibili a breve\n\n* Media interventi per P.A\n* Media interventi per mezzo\n* Interventi totali per P.A\n* Interventi totali per mezzo\n\nIl tutto suddiviso per codice di urgenza.</string>
    <string name="statistics_coming_soon">Statistiche disponibili a breve&#8230;</string>
    <string name="total_waiting">Attesa (%1$d)</string>
    <string name="worked_real_days">Operativo %1$d gg. su %2$d</string>
    <string name="selettiva">Selettiva</string>
    <string name="green">V</string>
    <string name="red">R</string>
    <string name="totals">Totali</string>
    <string name="yellow">G</string>
    <string name="white">B</string>
    <string name="action_sort">Ordina</string>
    <string name="sort_by_white">Ordina per bianchi</string>
    <string name="sort_by_green">Ordina per verdi</string>
    <string name="sort_by_yellow">Ordina per gialli</string>
    <string name="sort_by_red">Ordina per rossi</string>
    <string name="sort_by_ambulance">Ordina per mezzo</string>
    <string name="sort_by_totals">Ordina per missioni</string>
    <string name="sort_by_name">Ordina per nome</string>
    <string name="pref_custom_activity_off">All\'apertura verranno mostrati gli accessi agli ospedali</string>
    <string name="pref_custom_activity_on">All\'apertura verrà mostrata la pagina scelta qui sotto</string>
    <string name="custom_startup_header">Impostazioni all\'apertura</string>
    <string name="pref_custom_activity_title">Avvio personalizzato</string>
    <string name="activity_list_title">Pagina d\'apertura</string>
</resources>