<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sed.federico.prontosoccorsoligura.AmbulanceDetails.AmbulanceDetailsActivity">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_ambulance"
                android:title="@string/sort_by_ambulance" />
            <item
                android:id="@+id/sort_by_totals"
                android:title="@string/sort_by_totals" />
            <item
                android:id="@+id/sort_by_white"
                android:title="@string/sort_by_white" />
            <item
                android:id="@+id/sort_by_green"
                android:title="@string/sort_by_green" />
            <item
                android:id="@+id/sort_by_yellow"
                android:title="@string/sort_by_yellow" />
            <item
                android:id="@+id/sort_by_red"
                android:title="@string/sort_by_red" />
        </menu>
    </item>
</menu>
