<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sed.federico.prontosoccorsoligura.PubblicheAssistenze.PostazioniActivity">
    <item
        android:id="@+id/action_sort"
        android:checkable="false"
        android:icon="@drawable/ic_sort_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:orderInCategory="100"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_missions"
                android:orderInCategory="100"
                android:title="@string/sort_by_totals"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_white_code"
                android:orderInCategory="100"
                android:title="@string/sort_by_white"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_green_code"
                android:orderInCategory="100"
                android:title="@string/sort_by_green"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_yellow_code"
                android:orderInCategory="100"
                android:title="@string/sort_by_yellow"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_red_code"
                android:orderInCategory="100"
                android:title="@string/sort_by_red"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>


