<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_36dp"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/where_is_drago"
        android:icon="@drawable/helicopter_solid"
        android:orderInCategory="150"
        android:title="@string/where_is_drago"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_36dp"
        android:orderInCategory="200"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/action_sort_by_postazione"
                android:orderInCategory="300"
                android:title="@string/sort_by_postazione"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_by_mission"
                android:orderInCategory="400"
                android:title="@string/sort_by_mission"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
