<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/custom_startup_header">

        <SwitchPreferenceCompat
            app:key="custom_startup"
            app:summaryOff="@string/pref_custom_activity_off"
            app:summaryOn="@string/pref_custom_activity_on"
            app:title="@string/pref_custom_activity_title" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/activity_list"
            android:entryValues="@array/activity_list_values"
            android:key="startup_list"
            android:summary="%s"
            android:dependency="custom_startup"
            android:title="@string/activity_list_title" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
