<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:background="@color/white"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    android:paddingBottom="8dp"

    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="85dp">

    <TextView
        android:id="@+id/tot_missions"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/totals"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9999" />

    <TextView
        android:id="@+id/ambulance_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/selettiva"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/real_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/worked_real_days"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambulance_no"
        tools:text="25" />

    <TextView
        android:id="@+id/tot_red"
        android:layout_width="42dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/red"
        android:textAlignment="textEnd"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tot_missions"
        app:layout_constraintRight_toLeftOf="@+id/tot_missions"
        app:layout_constraintTop_toTopOf="@+id/tot_missions"
        app:layout_constraintVertical_bias="0.0"
        tools:text="9999" />

    <TextView
        android:id="@+id/tot_yellow"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/yellow"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/tot_red"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9999" />

    <TextView
        android:id="@+id/tot_green"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/green"
        android:textAlignment="textEnd"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/tot_yellow"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9999" />

    <TextView
        android:id="@+id/tot_white"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/white"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/tot_green"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9999" />

</android.support.constraint.ConstraintLayout>
